k8s/initial/https-mw.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirecttohttps
  namespace: dev
spec:
  redirectScheme:
    permanent: false
    scheme: https
