k8s/initial/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev
# ---
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: prod
