k8s/initial/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juicer-ingress
  namespace: dev
  annotations:
    cert-manager.io/cluster-issuer: local-ca-clusterissuer
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.middlewares: dev-redirecttohttps@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - dankop-dev.xyz
      secretName: local-ca-secret
  rules:
    - host: dankop-dev.xyz
      http:
        paths:
          - path: /api
            # - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: juicer-svc
                port:
                  name: juicer-tcp
          # - path: /kratos(/|$)(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: kratos-svc
          #       port:
          #         name: kratos-public-tcp
